# pbix2html

./: .gitignore  ARCHITECTURE.md  COMPATIBILITY.md  DAX_SUPPORT.md  README.md  ROADMAP.md  SECURITY.md  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  vitest.config.ts
.github/workflows/: build-public-pbix-corpus-100-distinct.yml  build-public-pbix-corpus-any-pr.yml  build-public-pbix-corpus-pr.yml  build-public-pbix-corpus-resilient.yml  build-public-pbix-corpus.yml  build-public-pbix-supplement.yml  ci.yml  import-validated-source.yml
.source-bundle/: hex-test.part
apps/cli/: package.json  tsconfig.json
apps/cli/src/: main.ts
docs/adr/: 0001-vertical-slice-architecture.md  0002-pbix-ingestion-strategy.md
fixtures/sales-report/: report.json
notes/: corpus.md
pbix2html/: __init__.py  __main__.py  cli.py  fidelity.py  reader.py  render.py
scripts/: build_pbix_corpus.py
tests/: helpers.py  test_binding_semantic_skeleton.py  test_cli.py  test_fidelity.py  test_pmo_regression.py  test_reader.py  test_reader_limits.py  test_render.py
tests/e2e/: dashboard.spec.ts
